delete save changes button from the modal

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="welcome-slider-content swiper-slide">
-          <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-center mt-5">
               <i class="fa-brands fa-sketch display-1 text-danger"></i>
           </div>
           <!-- <img src="Image6.jpg" alt=""> -->
@@ -89,7 +89,6 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
     </div>
