Design Modal Content

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="d-flex justify-content-center mt-5">
               <i class="fa-brands fa-sketch display-1 text-danger"></i>
           </div>
-          <!-- <img src="Image6.jpg" alt=""> -->
+
           <div class="welcome-slider-text-content">
             <h3>Photography</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
@@ -77,15 +77,47 @@
   </div>
 
   <!-- Modal -->
+
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Photography</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          ...
+          <div class="first-content-body row flex-md-row flex-sm-column mb-5">
+            <div class="text col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ducimus quidem quasi temporibus totam unde hic alias cumque itaque voluptatem accusamus quo esse explicabo enim aspernatur molestias velit libero, inventore odit. Fugit blanditiis eos cupiditate cum quis vitae repudiandae tenetur, iste, nisi officia quaerat quos perspiciatis! Maxime quas, earum voluptatibus similique fuga officiis beatae dignissimos exercitationem numquam. Odit harum laudantium porro quia est facere placeat cupiditate doloribus vitae praesentium repudiandae maiores modi suscipit sint, provident, debitis, vero excepturi perspiciatis? Inventore corporis et pariatur, dignissimos doloribus, voluptatum nihil facere mollitia voluptate architecto totam vitae reiciendis expedita, nobis illo ex at esse.</p>
+            </div>
+            <div class="image col-md-6 col-sm-12 mb-2">
+              <img src="Image1.jpg" class="w-100" alt="">
+            </div>
+          </div>
+          <div class="first-content-body row flex-md-row flex-md-row-reverse flex-sm-column flex-sm-column-reverse mb-5">
+            <div class="text col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
+            </div>
+            <div class="image col-md-6 col-sm-12 mb-2">
+              <img src="image2.jpg" class="w-100" alt="">
+            </div>
+          </div>
+          <div class="first-content-body row flex-md-row flex-sm-column mb-5">
+            <div class="text col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
+            </div>
+            <div class="image col-md-6 col-sm-12 mb-2">
+              <img src="image3.jpg" class="w-100" alt="">
+            </div>
+          </div>
+          <div class="first-content-body row flex-md-row flex-md-row-reverse flex-sm-column flex-sm-column-reverse mb-5">
+            <div class="text col-md-6 col-sm-12">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
+            </div>
+            <div class="image col-md-6 col-sm-12 mb-2">
+              <img src="image4.jpg" class="w-100" alt="">
+            </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -93,6 +125,7 @@
       </div>
     </div>
   </div>
+
 </section>
 
   <!-- Swiper JS -->
