--- a/index.html
+++ b/index.html
@@ -13,118 +13,68 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<section class="welcome-slider">
+<body>
+  <section class="welcome-slider">
   <div class="swiper mySwiper">
     <div class="swiper-wrapper">
         <div class="welcome-slider-content swiper-slide">
-          <img src="Image1.jpg" alt="">
+          <img src="InventoryManagement_Hero@3x.png" class="w-100 h-50 mb-3" alt="Stock">
           <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
+            <h3>Stock - المخزون</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
               culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              </a>
           </div>
         </div>
         <div class="welcome-slider-content swiper-slide">
-          <img src="Image2.jpg" alt="">
+          <img src="istockphoto-1249714570-612x612.jpg" class="w-100 h-50 mb-3" alt="Selling">
           <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
+            <h3>Selling - المبيعات</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
               culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              </a>
           </div>
         </div>
         <div class="welcome-slider-content swiper-slide">
-          <img src="Image3.jpg" alt="">
+          <img src="buying-image.jpg" class="w-100 h-50 mb-3" alt="Baying">
           <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
+            <h3>Buying - المشتريات</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
               culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              </a>
           </div>
         </div>
         <div class="welcome-slider-content swiper-slide">
-          <img src="Image4.jpg" alt="">
+          <img src="CRM-image.jpg" class="w-100 h-50 mb-3" alt="CRM">
           <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
+            <h3>CRM - إدارة علاقات العملاء</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
               culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              </a>
           </div>
         </div>
         <div class="welcome-slider-content swiper-slide">
-          <img src="Image5.jpg" alt="">
+          <img src="management-accounting.jpg" class="w-100 h-50 mb-3" alt="Accounting">
           <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
+            <h3>Accounting - الحسابات</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
               culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-          </div>
-        </div>
-        <div class="welcome-slider-content swiper-slide">
-          <div class="d-flex justify-content-center mt-5">
-              <i class="fa-brands fa-sketch display-1 text-danger"></i>
-          </div>
-
-          <div class="welcome-slider-text-content">
-            <h3>Photography</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-            <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+              </a>
           </div>
         </div>
     </div>
   </div>
 
-  <!-- Modal -->
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Photography</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="first-content-body row flex-md-row flex-sm-column mb-5">
-            <div class="text col-md-6 col-sm-12">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ducimus quidem quasi temporibus totam unde hic alias cumque itaque voluptatem accusamus quo esse explicabo enim aspernatur molestias velit libero, inventore odit. Fugit blanditiis eos cupiditate cum quis vitae repudiandae tenetur, iste, nisi officia quaerat quos perspiciatis! Maxime quas, earum voluptatibus similique fuga officiis beatae dignissimos exercitationem numquam. Odit harum laudantium porro quia est facere placeat cupiditate doloribus vitae praesentium repudiandae maiores modi suscipit sint, provident, debitis, vero excepturi perspiciatis? Inventore corporis et pariatur, dignissimos doloribus, voluptatum nihil facere mollitia voluptate architecto totam vitae reiciendis expedita, nobis illo ex at esse.</p>
-            </div>
-            <div class="image col-md-6 col-sm-12 mb-2">
-              <img src="Image1.jpg" class="w-100" alt="">
-            </div>
-          </div>
-          <div class="first-content-body row flex-md-row flex-md-row-reverse flex-sm-column flex-sm-column-reverse mb-5">
-            <div class="text col-md-6 col-sm-12">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
-            </div>
-            <div class="image col-md-6 col-sm-12 mb-2">
-              <img src="image2.jpg" class="w-100" alt="">
-            </div>
-          </div>
-          <div class="first-content-body row flex-md-row flex-sm-column mb-5">
-            <div class="text col-md-6 col-sm-12">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
-            </div>
-            <div class="image col-md-6 col-sm-12 mb-2">
-              <img src="image3.jpg" class="w-100" alt="">
-            </div>
-          </div>
-          <div class="first-content-body row flex-md-row flex-md-row-reverse flex-sm-column flex-sm-column-reverse mb-5">
-            <div class="text col-md-6 col-sm-12">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis voluptates amet repudiandae, nihil id quo dolorum voluptatum exercitationem rerum numquam ab, fuga iste sint reprehenderit cupiditate. Nam, illo reiciendis libero error, quas reprehenderit ea modi expedita eum aliquam excepturi numquam voluptates aut consequatur quam. Velit repudiandae explicabo harum voluptatem ipsum aut sint pariatur cupiditate ullam. Similique, fugiat sint quo nesciunt, ad ut quia, delectus vel consequatur quod nemo quam voluptatem repudiandae obcaecati odio facere nostrum et voluptas incidunt officia provident est mollitia? Quidem, accusantium voluptates, incidunt distinctio quisquam neque repellat magni, dolores similique voluptatum ab quibusdam beatae autem laudantium at!</p>
-            </div>
-            <div class="image col-md-6 col-sm-12 mb-2">
-              <img src="image4.jpg" class="w-100" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
 </section>
 
