Add The Slider to  a Accordion

--- a/index.html
+++ b/index.html
@@ -15,67 +15,78 @@
 
 <body>
   <section class="welcome-slider">
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-        <div class="welcome-slider-content swiper-slide">
-          <img src="InventoryManagement_Hero@3x.png" class="w-100 h-50 mb-3" alt="Stock">
-          <div class="welcome-slider-text-content">
-            <h3>Stock - المخزون</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
-                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-              </a>
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            Documentation
+          </button>
+        </h2>
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <div class="swiper mySwiper position-relative">
+              <div class="swiper-wrapper">
+                  <div class="welcome-slider-content swiper-slide">
+                    <img src="InventoryManagement_Hero@3x.png" class="w-100 h-50 mb-3" alt="Stock">
+                    <div class="welcome-slider-text-content">
+                      <h3>Stock - المخزون</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
+                        culpa debitis officia expedita unde?</p>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+                        </a>
+                    </div>
+                  </div>
+                  <div class="welcome-slider-content swiper-slide">
+                    <img src="istockphoto-1249714570-612x612.jpg" class="w-100 h-50 mb-3" alt="Selling">
+                    <div class="welcome-slider-text-content">
+                      <h3>Selling - المبيعات</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
+                        culpa debitis officia expedita unde?</p>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+                        </a>
+                    </div>
+                  </div>
+                  <div class="welcome-slider-content swiper-slide">
+                    <img src="buying-image.jpg" class="w-100 h-50 mb-3" alt="Baying">
+                    <div class="welcome-slider-text-content">
+                      <h3>Buying - المشتريات</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
+                        culpa debitis officia expedita unde?</p>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+                        </a>
+                    </div>
+                  </div>
+                  <div class="welcome-slider-content swiper-slide">
+                    <img src="CRM-image.jpg" class="w-100 h-50 mb-3" alt="CRM">
+                    <div class="welcome-slider-text-content">
+                      <h3>CRM - إدارة علاقات العملاء</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
+                        culpa debitis officia expedita unde?</p>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+                        </a>
+                    </div>
+                  </div>
+                  <div class="welcome-slider-content swiper-slide">
+                    <img src="management-accounting.jpg" class="w-100 h-50 mb-3" alt="Accounting">
+                    <div class="welcome-slider-text-content">
+                      <h3>Accounting - الحسابات</h3>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
+                        culpa debitis officia expedita unde?</p>
+                        <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
+                          <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
+                        </a>
+                    </div>
+                  </div>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="welcome-slider-content swiper-slide">
-          <img src="istockphoto-1249714570-612x612.jpg" class="w-100 h-50 mb-3" alt="Selling">
-          <div class="welcome-slider-text-content">
-            <h3>Selling - المبيعات</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
-                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-              </a>
-          </div>
-        </div>
-        <div class="welcome-slider-content swiper-slide">
-          <img src="buying-image.jpg" class="w-100 h-50 mb-3" alt="Baying">
-          <div class="welcome-slider-text-content">
-            <h3>Buying - المشتريات</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
-                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-              </a>
-          </div>
-        </div>
-        <div class="welcome-slider-content swiper-slide">
-          <img src="CRM-image.jpg" class="w-100 h-50 mb-3" alt="CRM">
-          <div class="welcome-slider-text-content">
-            <h3>CRM - إدارة علاقات العملاء</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
-                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-              </a>
-          </div>
-        </div>
-        <div class="welcome-slider-content swiper-slide">
-          <img src="management-accounting.jpg" class="w-100 h-50 mb-3" alt="Accounting">
-          <div class="welcome-slider-text-content">
-            <h3>Accounting - الحسابات</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto accusamus ratione nesciunt atque, dolores vel
-              culpa debitis officia expedita unde?</p>
-              <a href="https://docs.google.com/document/d/e/2PACX-1vTEvd-uyVPd2BbDJQupBngGvyYn4ZhJt9qJXz3nrP9wZ1GWmmkhOEscXm3S3-qVRHT3LNUaaL5suZuP/pub?embedded=true" target="_blank">
-                <button class="btn" data-bs-toggle="modal" data-bs-target="#exampleModal">Read more</button>
-              </a>
-          </div>
-        </div>
+      </div>
     </div>
-  </div>
-
-
 </section>
 
   <!-- Swiper JS -->
